--- a/app.json
+++ b/app.json
@@ -1,34 +1,41 @@
 {
-  "pages": [
-    "pages/start/start",
-    "pages/index/index",
-    "pages/category/category"
-  ],
-  "window": {
-    "backgroundTextStyle": "light",
-    "navigationBarBackgroundColor": "#fff",
-    "navigationBarTitleText": "天使童装",
-    "navigationBarTextStyle": "black"
-  },
-  "tabBar": {
-    "color": "#6e6d6b",
-    "selectedColor": "#e64340",
-    "backgroundColor": "#ffffff",
-    "borderStyle": "black",
-    "list": [
-      {
-        "pagePath": "pages/index/index",
-        "text": "首页",
-        "iconPath": "images/tabBar/home-off.png",
-        "selectedIconPath": "images/tabBar/home-on.png"
-      },
-      {
-        "pagePath": "pages/category/category",
-        "text": "分类",
-        "iconPath": "images/tabBar/ic_catefory_normal.png",
-        "selectedIconPath": "images/tabBar/ic_catefory_pressed.png"
-      }
-    ]
-  },
-  "sitemapLocation": "sitemap.json"
+    "pages": [
+        "pages/my/my",
+        "pages/start/start",
+        "pages/index/index",
+        "pages/category/category"
+    ],
+    "window": {
+        "backgroundTextStyle": "light",
+        "navigationBarBackgroundColor": "#fff",
+        "navigationBarTitleText": "天使童装",
+        "navigationBarTextStyle": "black"
+    },
+    "tabBar": {
+        "color": "#6e6d6b",
+        "selectedColor": "#e64340",
+        "backgroundColor": "#ffffff",
+        "borderStyle": "black",
+        "list": [
+            {
+                "pagePath": "pages/index/index",
+                "text": "首页",
+                "iconPath": "images/tabBar/home-off.png",
+                "selectedIconPath": "images/tabBar/home-on.png"
+            },
+            {
+                "pagePath": "pages/category/category",
+                "text": "分类",
+                "iconPath": "images/tabBar/ic_catefory_normal.png",
+                "selectedIconPath": "images/tabBar/ic_catefory_pressed.png"
+            },
+            {
+                "pagePath": "pages/my/my",
+                "text": "我的",
+                "iconPath": "images/tabBar/my-off.png",
+                "selectedIconPath": "images/tabBar/my-on.png"
+            }
+        ]
+    },
+    "sitemapLocation": "sitemap.json"
 }
